--- a/MiniRT_con_Luna/Makefile
+++ b/MiniRT_con_Luna/Makefile
@@ -13,7 +13,7 @@
 NAME        = miniRT
 
 CC          = cc
-CFLAGS      = -Wall -Wextra -Werror
+CFLAGS      = -Wall -Wextra -Werror -g
 
 # ===================== #
 # ===== DIRECTORIES ==== #
